--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,11 +1,44 @@
 
+ 
+ 
+<style>
+* {
+  box-sizing: border-box;
+}
+
+body {
+  background-color: goldenrod;
+}
+
+/* Create three equal columns that floats next to each other */
+.column {
+  float: left;
+  width: 33.33%;
+  padding: 10px;
+  height: 300px; /* Should be removed. Only for demonstration */
+}
+
+/* Clear floats after the columns */
+.row:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+</style> 
+ 
   <center>
+
+      <p>
+        <img src = "/images/burger.jpg"
+      </p>
+      </br>
     <h1>Burgers</h1>
 
     <h2>Order a Burger</h2>
 
     <form id="orderburger" class="button-size">
 	    <textarea type="text" name="burger"></textarea>
+      </br>
 	    <button type="submit">Order Burger!</button>
     </form>
   </center>
@@ -16,40 +49,46 @@
 
   <div class="row">
     <!-- Left side (Burgers Available) -->
-    <div class="col-md-4">
+    <div class="column">
       <h3 class="submitFont">Burgers Available</h3>
       <div id="burgersAvailable">
 
         <!-- Dynamically Add User Burgers Here -->
         {{#each burger}}
           {{#unless this.devoured}}
+          <div style=padding:5px>
           <form action="burger/eat/{{this.id}}" method="POST">
             <div class="input-group">
               <li class="form-control"> {{this.burger}}
                 <span class="input-group-btn">
-                  <button data-burgerid="{{this.id}}" class="btn btn-success devourburger">   Devour It!</button>
+                  <button data-burgerid="{{this.id}}" class="btn btn-success devourburger" style=margin-left:30px>   Devour It!</button>
                 </span>
               </li>
             </div>
           </form>
+          </div>
           {{/unless}}
         {{/each}}
 
       </div>
     </div>
 
+  <div class="column">
+  </div>
 
       <!-- Right side (Burgers Devoured) -->
-      <div class="col-md-4">
+      <div class="column">
        <h3 class="submitFont">Burgers Devoured</h3>
         <div id="alreadyEaten">
 
           <!-- Dynamically Insert Devoured Burgers Here -->
           {{#each burger}}
             {{#if this.devoured}}
+            <div>
               <div class="input-group">
-                <li class="form-control"> {{this.burger}}</li>
+                <li class="form-control" style=padding-bottom:15px> {{this.burger}}</li>
               </div>
+              <div>
             {{/if}}
           {{/each}}
 
