--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -29,43 +29,36 @@ body {
   <center>
 
       <p>
-        <img src = "/images/burger.jpg"
+        <img src = "burger.jpg" width="200">
       </p>
-      </br>
-    <h1>Burgers</h1>
-
-    <h2>Order a Burger</h2>
+    <h1>Eat-Da-Burger</h1>
 
     <form id="orderburger" class="button-size">
 	    <textarea type="text" name="burger"></textarea>
       </br>
 	    <button type="submit">Order Burger!</button>
+      <h4>Type a burger that you would like to eat and click "Order Burger"... </h4>
     </form>
   </center>
 
 
-
-
-
   <div class="row">
-    <!-- Left side (Burgers Available) -->
     <div class="column">
       <h3 class="submitFont">Burgers Available</h3>
       <div id="burgersAvailable">
 
-        <!-- Dynamically Add User Burgers Here -->
         {{#each burger}}
           {{#unless this.devoured}}
           <div style=padding:5px>
-          <form action="burger/eat/{{this.id}}" method="POST">
-            <div class="input-group">
+          {{!-- <form action="burger/eat/{{this.id}}" method="POST"> --}}
+            {{!-- <div class="input-group"> --}}
               <li class="form-control"> {{this.burger}}
                 <span class="input-group-btn">
                   <button data-burgerid="{{this.id}}" class="btn btn-success devourburger" style=margin-left:30px>   Devour It!</button>
                 </span>
               </li>
-            </div>
-          </form>
+            {{!-- </div> --}}
+          {{!-- </form> --}}
           </div>
           {{/unless}}
         {{/each}}
@@ -73,15 +66,13 @@ body {
       </div>
     </div>
 
-  <div class="column">
-  </div>
+      <div class="column">
+      </div>  
 
-      <!-- Right side (Burgers Devoured) -->
       <div class="column">
        <h3 class="submitFont">Burgers Devoured</h3>
         <div id="alreadyEaten">
 
-          <!-- Dynamically Insert Devoured Burgers Here -->
           {{#each burger}}
             {{#if this.devoured}}
             <div>
