--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,6 +1,3 @@
-
- 
- 
 <style>
 * {
   box-sizing: border-box;
@@ -26,119 +23,81 @@ body {
 }
 </style> 
  
-  <center>
-
+   <center>
+</br>
+</br>
       <p>
-        <img src = "burger.jpg" width="200">
+        <img src = "/images/burger.jpg" width="200">
       </p>
     <h1>Eat-Da-Burger</h1>
 
-    <form id="orderburger" class="button-size">
-	    <textarea type="text" name="burger"></textarea>
-      </br>
-	    <button type="submit">Order Burger!</button>
-      <h4>Type a burger that you would like to eat and click "Order Burger"... </h4>
-    </form>
-  </center>
+      {{!-- Input Burgers Form --}}
+      <form action="burger/create" method="POST"> 
+        
+        <div class="row">
+          <div class="col-md-3"></div> 
 
+          <div class="form-group col-md-6">
+            <textarea class="form-control" type="text" columns="6" rows="2" id="new_burger required value="" name="burger"></textarea>
+          </div>
+
+          <div class="col-md-3"></div> 
+        </div>
+      
+        {{!-- Submit Button --}}
+        <center>
+          <button id="submit-button" type="submit" class="btn btn-primary">Order Burger!</button>
+          <h4>Build your burger in the box above and click "Order Burger"... </h4>
+
+        </center>
+
+      </form>
+
+  </center>
+ 
+ 
   <div class="row">
+  <center>
     <div class="column">
-      <div style=margin-left:100px>
       <h3 class="submitFont">Burgers Available</h3>
       <div id="burgersAvailable">
 
-        {{#each burger}}
-          {{#unless this.devoured}}
+        {{#each burgers}}
+          {{#unless devoured}}
           <div style=padding:5px>
-          {{!-- <form action="burger/eat/{{this.id}}" method="POST"> --}}
-            {{!-- <div class="input-group"> --}}
-              <li class="form-control"> {{this.burger}}
+          <form action="burger/eat/{{id}}" method="POST">
+            <div class="input-group">
+              <div>{{id}}. {{burger}}</div>
                 <span class="input-group-btn">
-                  <button data-burgerid="{{this.id}}" class="btn btn-success devourburger" style=margin-left:30px>   Devour It!</button>
+                  <button class="btn btn-secondary devour-button" type="submit" style=margin-left:5px>Devour It!</button>
                 </span>
-              </li>
-            {{!-- </div> --}}
-          {{!-- </form> --}}
-          </div>
+              </div>
+            </div>
+          </form>
           {{/unless}}
         {{/each}}
-        </div>
+
       </div>
     </div>
-
-
 
       <div class="column" style=column-width:5px;>
       </div>  
 
       <div class="column">
-        <div style=margin-left:100px>
-       <h3 class="submitFont">Burgers Devoured</h3>
-        <div id="alreadyEaten">
+      <h3 class="submitFont">Burgers Devoured</h3>
+      <div id="alreadyEaten">
 
-          {{#each burger}}
-            {{#if this.devoured}}
-            <div>
-              <div class="input-group">
-                <li class="form-control" style=padding-bottom:15px> {{this.burger}}</li>
-              </div>
-            <div>
-            {{/if}}
-          {{/each}}
+        {{#each burgers}}
+          {{#if this.devoured}}
+            <div style=padding:5px>
+            <div class="input-group">
+              <div>{{this.id}}. {{this.burger}}</div>
+            </div>
+            </div>
+          {{/if}}
+        {{/each}}
 
-        </div>
-        </div>
       </div>
     </div>
-  </div>
-  
-
-
-
-<script type="text/javascript">
-
-  $("#orderburger").on("submit", function(event) {
-    // Make sure to preventDefault on a submit event.
-    event.preventDefault();
-
-    var orderBurger = {
-      burger: $("#orderburger [name=burger]").val().trim()
-    };
-
-    // Send the POST request.
-    $.ajax("/api/burgers", {
-      type: "POST",
-      data: orderBurger
-    }).then(
-      function() {
-        console.log("Ordered Burger!!");
-        // Reload the page to get the updated list
-        location.reload();
-      }
-    );
-  });
-
-  $(".devourburger").on("click", function(event) {
-    // Make sure to preventDefault on a submit event.
-    event.preventDefault();
-
-    var id = $(this).data("burgerid");
-
-    {{!-- console.log("id = " + id); --}}
-
-    devourBurger = {
-      burger: $(".devourburger [devoured=true]")
-      };
-
-    // Send the PUT request.
-    $.ajax("/api/burgers/" + id, {
-      type: "PUT",
-    }).then(
-      function() {
-        {{!-- console.log("updated id ", id); --}}
-        // Reload the page to get the updated list
-        location.reload();
-      }
-    );
-  });
-</script>
+  </center>
+</div>
