--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -1,12 +1,21 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-	<meta charset="UTF-8">
-	<title>Burgers</title>
-	<script src="https://code.jquery.com/jquery.js"></script>
+<html>
+  <head>
+    {{!-- Title --}}
+    <title>Eat da Burger!</title>
 
-</head>
-<body>
-	{{{ body }}}
-</body>
-</html>
+    <!-- Bootstrap -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    
+
+  </head>
+
+  <body>
+    <div class="container-fluid">      
+
+      {{{body}}}
+
+    </div>
+
+  </body>
+</html> 
