--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -4,7 +4,7 @@
     {{!-- Title --}}
     <title>Eat da Burger!</title>
 
-    <!-- Bootstrap -->
+    <!-- Bootstrap for webpage -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     
 
@@ -12,7 +12,7 @@
 
   <body>
     <div class="container-fluid">      
-
+      {{!-- handlebar for body of page --}}
       {{{body}}}
 
     </div>
